[package]
name = "paint"
version = "0.1.0"
authors = ["jeremyt135 <jdt13579@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.45"
wasm-bindgen-futures = "0.4.18"

[dependencies.wasm-bindgen]
version = "0.2.68"
features = [
  'serde-serialize'
]

[dependencies.serde]
version = "1.0"
features = [
  "derive"
]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'DomRect',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlDivElement',
  'HtmlElement',
  'MouseEvent',
  'UiEvent',
  'WebGlBuffer',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]
